# kube-operator

./: Cargo.toml  justfile
crds/: modeldeployment.yaml
deploy/: operator-deployment.yaml  rbac.yaml
examples/: modeldeployment-sample.yaml
model-server/: Dockerfile
model-server/app/: main.py
operator/: Cargo.toml  Dockerfile
operator/src/: crd.rs  error.rs  event.rs  finalizer.rs  main.rs  reconsile.rs
